Fix form-item wrap problem

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ p {
 
 body {
   background-color: #f8f8f8;
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
 }
 
 .container {
@@ -95,8 +95,6 @@ body {
 .main-center {
   padding: 20px 0 20px 8%;
   background-color: white;
-  display: flex;
-  flex-wrap: wrap;
   box-shadow: 0px 4px 8px var(--shadow-color);
 }
 
@@ -105,6 +103,12 @@ body {
   font-weight: 700;
   font-size: 1.2rem;
   margin-bottom: 10px;
+}
+
+.form-row {
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: auto;
 }
 
 .form-item {
